Added 3d game objects and PointLight. Created ball physics.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 
-<body onload='init();'>
+<body onload='three_cljs.core.init();'>
     <div id='gameCanvas'></div>
     <div id='scoreboard'>
         <h1 id='scores'>0-0</h1>
