Create handlers for updating webgl updates.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -46,6 +46,10 @@
         <br>D - move right</h3>
     </div>
 
+    <div id='debug'>
+
+    </div>
+
     <script src='js/three.min.js'></script>
     <script src='js/init-scene.js'></script>
     <!--     <script src='./js/keyboard.js'></script> -->
