--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -38,13 +38,16 @@
 
   <body onload='three_cljs.core.init();'>
     <div id='gameCanvas'></div>
-    <div id='scoreboard'>
+    <div id='game'>
+
+    </div>
+<!--     <div id='scoreboard'>
       <h1 id='scores'>0-0</h1>
       <h1 id='title'>3D PONG</h1>
       <h2 id='winnerBoard'>First to 7 wins!</h2>
       <h3>A - move left
         <br>D - move right</h3>
-    </div>
+    </div> -->
 
     <div id='debug'>
 
