Created factory functions and webgl object initializers.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -33,6 +33,9 @@
         background-color: white;
         color: black;
       }
+
+      #game {
+      color: white;}
     </style>
   </head>
 
