Added larger scene with light and shadows, dat-gui controls, and FPS stats.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,11 +13,14 @@
 
   <body onload='three_cljs.core.init();'>
     <div id='webGL-container'></div>
+    <div id='stats'></div>
 
     <div id='debug'></div>
 
-<!--     <script src='js/three.min.js'></script> -->
-    <!--     <script src='./js/keyboard.js'></script> -->
+    <script src='js/three.min.js'></script>
+    <script src='js/dat.gui.min.js'></script>
+    <script src='js/OrbitControls.js'></script>
+    <script src='js/stats.min.js'></script>
     <script src='js/main.js'></script>
   </body>
 
